--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
+	"author": "Justin Thomas",
+	"description": "Ground-breaking tool for the modern coder",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
@@ -10,6 +12,5 @@
 	"repository": {
 		"type": "git",
 		"url": "https://idontknow/todo.git"
-	},
-	"author": "Justin Thomas"
+	}
 }
