--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "Justin Thomas",
 	"description": "Ground-breaking tool for the modern coder",
+	"keywords": ["freecodecamp", "practice", "backend"],
 	"dependencies": {
 		"express": "^4.14.0"
 	},
